--- a/src/yata/yata.fxml
+++ b/src/yata/yata.fxml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yata.Controller">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yata.Controller">
     <children>
-        <Label fx:id="label" text="Label" />
+        <Label fx:id="lbTimer" text="--:--" />
+        <Button fx:id="btnStart" text="Start" onAction="#handleStartClick" />
+        <Button fx:id="btnSkip" text="Skip" onAction="#handleSkipClick"/>
+        <Label fx:id="versionInfo" text="Label" />
     </children>
-</StackPane>
+</VBox>
